Create Profile metadata

--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Kasun Umesh" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      name="description"
+      content="I am currently an undergraduate computer science student. I have a strong foundation in computer science principles and am always looking to expand my knowledge. I am a quick learner and not afraid to take on new challenges. I like to work collaboratively in teams"
+    />
+
+    <meta
+      property="og:image"
+      content="https://developer.mozilla.org/static/img/opengraph-logo.png"
+    />
+    <meta
+      property="og:description"
+      content="The Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML Apps."
+    />
+    <meta property="og:title" content="Mozilla Developer Network" />
+
     <title>Kasun Umesh</title>
   </head>
   <body>
