--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
       content="I am currently an undergraduate computer science student. I have a strong foundation in computer science principles and am always looking to expand my knowledge. I am a quick learner and not afraid to take on new challenges. I like to work collaboratively in teams"
     />
 
-    <meta
-      property="og:image"
-      content="https://developer.mozilla.org/static/img/opengraph-logo.png"
-    />
+    <meta property="og:image" content="assets\images\mainImage.jpg" />
     <meta
       property="og:description"
-      content="The Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML Apps."
+      content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
-    <meta property="og:title" content="Mozilla Developer Network" />
+    <meta property="og:title" content="Kasun Umesh" />
 
     <title>Kasun Umesh</title>
   </head>
