Create New Metadata

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
       content="I am currently an undergraduate computer science student. I have a strong foundation in computer science principles and am always looking to expand my knowledge. I am a quick learner and not afraid to take on new challenges. I like to work collaboratively in teams"
     />
 
-    <meta property="og:image" content="assets\images\mainImage.jpg" />
+    <meta property="twitter:card" content="summary_large_image" />
     <meta
-      property="og:description"
+      property="twitter:url"
+      content="https://kasunumesh.github.io/MyProfile/"
+    />
+    <meta property="twitter:title" content="Kasun Umesh" />
+    <meta
+      property="twitter:description"
       content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
-    <meta property="og:title" content="Kasun Umesh" />
+    <meta property="twitter:image" content="assets\images\Metadata.jpg" />
 
     <title>Kasun Umesh</title>
   </head>
