--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta
+    <!-- <meta
       name="description"
       content="I am currently an undergraduate computer science student. I have a strong foundation in computer science principles and am always looking to expand my knowledge. I am a quick learner and not afraid to take on new challenges. I like to work collaboratively in teams"
-    />
+    /> -->
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta
