--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta
+    <!-- <meta
       name="description"
       content="I am currently an undergraduate computer science student. I have a strong foundation in computer science principles and am always looking to expand my knowledge. I am a quick learner and not afraid to take on new challenges. I like to work collaboratively in teams"
     />
@@ -21,9 +21,38 @@
       property="og:description"
       content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
-    <meta property="twitter:image" content="assets\images\Metadata.png" />
+    <meta property="twitter:image" content="assets\images\Metadata.png" /> -->
 
+    <!-- Primary Meta Tags -->
     <title>Kasun Umesh</title>
+    <meta name="title" content="Kasun Umesh" />
+    <meta
+      name="description"
+      content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kasunumesh.github.io/MyProfile/" />
+    <meta property="og:title" content="Kasun Umesh" />
+    <meta
+      property="og:description"
+      content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
+    />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://kasunumesh.github.io/MyProfile/"
+    />
+    <meta property="twitter:title" content="Kasun Umesh" />
+    <meta
+      property="twitter:description"
+      content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
+    />
+    <meta property="twitter:image" content="" />
   </head>
   <body>
     <h1>Hello</h1>
