--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       property="og:description"
       content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="assets\images\Metadata.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -52,7 +52,7 @@
       property="twitter:description"
       content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
-    <meta property="twitter:image" content="" />
+    <meta property="twitter:image" content="assets\images\Metadata.png" />
   </head>
   <body>
     <h1>Hello</h1>
