--- a/index.html
+++ b/index.html
@@ -25,34 +25,15 @@
 
     <!-- Primary Meta Tags -->
     <title>Kasun Umesh</title>
-    <meta name="title" content="Kasun Umesh" />
-    <meta
-      name="description"
-      content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
-    />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kasunumesh.github.io/MyProfile/" />
     <meta property="og:title" content="Kasun Umesh" />
     <meta
       property="og:description"
       content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
     />
     <meta property="og:image" content="assets\images\Metadata.png" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://kasunumesh.github.io/MyProfile/"
-    />
-    <meta property="twitter:title" content="Kasun Umesh" />
-    <meta
-      property="twitter:description"
-      content="Hello I am Kasun Umesh. A professional software engineer. Visit the website to know about me."
-    />
-    <meta property="twitter:image" content="assets\images\Metadata.png" />
+    <meta property="og:url" content="https://kasunumesh.github.io/MyProfile/" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <h1>Hello</h1>
