--- a/index.html
+++ b/index.html
@@ -17,6 +17,31 @@
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <!-- <section></section> -->
+
+      <nav>
+        <a href="index.html"><img src="assets/images/logo.png" alt="" /></a>
+        <ul>
+          <li><a href="#home">Home</a></li>
+
+          <li><a href="#about">About Me</a></li>
+
+          <li><a href="#skills">Skills</a></li>
+
+          <li><a href="#services">Services</a></li>
+
+          <li><a href="#education">Education</a></li>
+
+          <li><a href="#project">Project</a></li>
+
+          <li><a href="#contact">Contact Me</a></li>
+        </ul>
+
+        <label id="icon">
+          <i class="fas fa-bars"></i>
+        </label>
+      </nav>
+    </header>
   </body>
 </html>
