Created Home Section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <!-- <section></section> -->
 
       <nav>
-        <a href="index.html"><img src="assets/images/logo.png" alt="" /></a>
+        <a href="index.html"
+          ><img src="assets/images/logo.png" alt="" width="50px"
+        /></a>
         <ul>
           <li><a href="#home">Home</a></li>
 
@@ -43,5 +45,90 @@
         </label>
       </nav>
     </header>
+
+    <main>
+      <!-- Home -->
+      <section>
+        <img src="assets\images\mainImage.jpg" alt="Main Image" />
+      </section>
+      <section>
+        <!-- <h1>Hello....!</h1>
+        <h1 id="name">I'm Kasun Umesh</h1>
+        <h1 id="change-name">Kasun Umesh</h1>
+        <h2 id="other-title">Professional Full Stack Developer</h2> -->
+
+        <div>
+          <h1>I'm <span>Kasun Umesh</span></h1>
+          <h2>Professional Full Stack Developer</h2>
+        </div>
+        <!-- Social Media Start -->
+
+        <section>
+          <a
+            class="link"
+            href="https://www.facebook.com/wakasun.kasun.1/"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+              <span>Facebook</span>
+            </div>
+          </a>
+
+          <a
+            class="link"
+            href="https://www.instagram.com/kasun_umesh_/"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <span>Instagram</span>
+            </div>
+          </a>
+
+          <a
+            class="link"
+            href="https://twitter.com/KasunUmesh_"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+              <span>Twitter</span>
+            </div>
+          </a>
+
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/kasun-umesh-49242b226/"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+              <span>Linkedin</span>
+            </div>
+          </a>
+
+          <a class="link" href="https://github.com/KasunUmesh" target="_blank">
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-github"></i></div>
+              <span>Github</span>
+            </div>
+          </a>
+
+          <a class="link" href="https://wa.me/0757015240" target="_blank">
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-whatsapp"></i></div>
+              <span>Whatsapp</span>
+            </div>
+          </a>
+        </section>
+
+        <!-- Social Media End -->
+      </section>
+
+      <!-- Home End -->
+    </main>
   </body>
 </html>
