--- a/index.html
+++ b/index.html
@@ -129,6 +129,30 @@
       </section>
 
       <!-- Home End -->
+
+      <!-- About Me Start -->
+      <section>
+        <h1>ABOUT ME</h1>
+        <p>
+          Hello, I’m Kasun Umesh From Sri Lanka Who is 20 years old. I’m
+          Software Engineer, <br />UI/UX Developer & Fullstack Java Developer.
+          I’m Currently learning more about <br />software development.
+        </p>
+
+        <div>
+          <a class="btn-1" href="#contact">Contact Me</a>
+        </div>
+
+        <img src="assets\images\About.png" alt="About Image" />
+
+        <img
+          src="assets\images\About_two.png"
+          alt="About Background Image"
+          width="300px"
+        />
+      </section>
+
+      <!-- About Me End -->
     </main>
   </body>
 </html>
