Created Skills Section

--- a/index.html
+++ b/index.html
@@ -153,6 +153,56 @@
       </section>
 
       <!-- About Me End -->
+
+      <!-- Skills Start -->
+
+      <section>
+        <h1>SKILLS</h1>
+
+        <section>
+          <div>
+            <img src="assets/images/html5.png" alt="HTML" />
+            <h2>HTML</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/css.png" alt="CSS" />
+            <h2>CSS</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/js.png" alt="JAVASCRIPT" />
+            <h2>JAVASCRIPT</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/bootstrap.png" alt="BOOTSTRAP" />
+            <h2>BOOTSTRAP</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/java.png" alt="JAVA" />
+            <h2>JAVA</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/mysql.png" alt="MYSQL" />
+            <h2>MYSQL</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/hibernate.png" alt="HIBERNATE" />
+            <h2>HIBERNATE</h2>
+          </div>
+
+          <div>
+            <img src="assets/images/Node.js.png" alt="NODE JS" />
+            <h2>NODE JS</h2>
+          </div>
+        </section>
+      </section>
+
+      <!-- Skills End -->
     </main>
   </body>
 </html>
