Created Services Section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,76 @@
       </section>
 
       <!-- Skills End -->
+
+      <!-- Services Start -->
+      <section>
+        <div></div>
+        <h1>Services</h1>
+
+        <section>
+          <!-- Web Design -->
+          <div></div>
+
+          <img src="assets/images/web_design.png" alt="Web Design" />
+
+          <h2>Web Design</h2>
+
+          <p>
+            I do ui/ux design for the website that helps website to get a unique
+            look.
+          </p>
+
+          <!-- Web Design End -->
+
+          <!-- Web Development -->
+
+          <div></div>
+
+          <img src="assets/images/web_Development.png" alt="Web Development" />
+
+          <h2>Web Development</h2>
+
+          <p>
+            I also develop the websites. I create high performance websites with
+            fast speed.
+          </p>
+
+          <!-- Web Development End -->
+
+          <!-- App Development -->
+
+          <div></div>
+
+          <img src="assets/images/app_development.png" alt="App Development" />
+
+          <h2>App Development</h2>
+
+          <p>
+            I develop mobile applications and Standalone applications. I create
+            the best applications.
+          </p>
+
+          <!-- App Development End -->
+
+          <!-- Graphic Design -->
+
+          <div></div>
+
+          <img src="assets/images/graphic_design.png" alt="Graphic Design" />
+
+          <h2>Graphic Design</h2>
+
+          <p>I am best graphic designer. I create creative designs.</p>
+
+          <!--  Graphic Design End -->
+        </section>
+        <img
+          src="assets/images/Skills_background.png"
+          alt="Skills background"
+          width="200px"
+        />
+      </section>
+      <!-- services End -->
     </main>
   </body>
 </html>
