--- a/index.html
+++ b/index.html
@@ -273,6 +273,46 @@
         />
       </section>
       <!-- services End -->
+
+      <!-- Education Start -->
+
+      <section>
+        <h1>Education</h1>
+
+        <img
+          src="assets/images/Education_Background.svg"
+          alt="Education Background"
+        />
+
+        <section>
+          <div><i class="fa-solid fa-graduation-cap"></i></div>
+          <div><i class="fa-solid fa-graduation-cap"></i></div>
+          <div><i class="fa-solid fa-graduation-cap"></i></div>
+
+          <section>
+            <div></div>
+            <div></div>
+            <div></div>
+          </section>
+
+          <section>
+            <div></div>
+            <div></div>
+            <div></div>
+          </section>
+
+          <section>
+            <h2>Ordinary Level Education</h2>
+            <h3>2018</h3>
+            <h2>Advanced Level Education</h2>
+            <h3>2020</h3>
+            <h2>Institute of Software Engineering</h2>
+            <h3>2021</h3>
+          </section>
+        </section>
+      </section>
+
+      <!-- Education End -->
     </main>
   </body>
 </html>
