Created Project Section

--- a/index.html
+++ b/index.html
@@ -275,7 +275,6 @@
       <!-- services End -->
 
       <!-- Education Start -->
-
       <section>
         <h1>Education</h1>
 
@@ -311,8 +310,62 @@
           </section>
         </section>
       </section>
-
       <!-- Education End -->
+
+      <!-- Project Section Start -->
+      <section>
+        <h1>Project</h1>
+        <img
+          src="assets/images/Project_Background.svg"
+          alt="Project Background"
+        />
+
+        <section>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+
+          <section>
+            <div>
+              <img src="assets/images/Project One.png" alt="Project One" />
+              <h3>Show More</h3>
+              <a href=""></a>
+            </div>
+
+            <div>
+              <img src="assets/images/Project Two.png" alt="Project Two" />
+              <h3>Show More</h3>
+              <a href=""></a>
+            </div>
+
+            <div>
+              <img src="assets/images/Project Three.png" alt="Project Three" />
+              <h3>Show More</h3>
+              <a
+                class="link"
+                href="https://github.com/KasunUmesh/Delivering_Management_System.git"
+                target="_blank"
+              ></a>
+            </div>
+
+            <div>
+              <img src="assets/images/Project Web.png" alt="Project Web" />
+              <h3>Show More</h3>
+              <a class="link" href="project.html" target="_blank"></a>
+            </div>
+          </section>
+
+          <section>
+            <h2>Institute Management System</h2>
+            <h2>Business Management System</h2>
+            <h2>Deliver Management System</h2>
+            <h2>All Web Developing Project</h2>
+          </section>
+        </section>
+      </section>
+
+      <!-- Project Section End -->
     </main>
   </body>
 </html>
