--- a/index.html
+++ b/index.html
@@ -364,8 +364,55 @@
           </section>
         </section>
       </section>
-
       <!-- Project Section End -->
+
+      <!-- Contact Section Start -->
+      <section>
+        <h3>get in touch</h3>
+        <h1>CONTACT</h1>
+
+        <section>
+          <img src="assets/images/connected.svg" alt="connected" />
+          <section>
+            <div><h3>+94 757015240</h3></div>
+            <div><h3>kasunumesh38@gmail.com</h3></div>
+          </section>
+
+          <section>
+            <div><i class="fa-solid fa-phone"></i></div>
+            <div><i class="fa-solid fa-envelope"></i></div>
+          </section>
+
+          <div></div>
+
+          <section>
+            <form action="">
+              <div class="form-group">
+                <label for="yourName">Your Name</label>
+                <input type="text" id="yourName" name="yourName" />
+              </div>
+
+              <div class="form-group">
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" />
+              </div>
+
+              <div class="form-group">
+                <label for="message">Your Message</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  cols="30"
+                  rows="10"
+                ></textarea>
+              </div>
+
+              <button type="submit">Send</button>
+            </form>
+          </section>
+        </section>
+      </section>
+      <!-- Contact Section End -->
     </main>
   </body>
 </html>
