--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasun Umesh</title>
-
     <meta property="og:title" content="Kasun Umesh" />
     <meta
       property="og:description"
@@ -15,6 +14,11 @@
     <meta property="og:image" content="assets\images\Metadata.png" />
     <meta property="og:url" content="https://kasunumesh.github.io/MyProfile/" />
     <meta name="twitter:card" content="summary_large_image" />
+
+    <script
+      src="https://kit.fontawesome.com/4c9fb7b689.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
