--- a/index.html
+++ b/index.html
@@ -174,46 +174,46 @@
 
       <!-- Skills Start -->
 
-      <section>
+      <section id="skills">
         <h1>SKILLS</h1>
 
         <section>
-          <div>
+          <div id="divOne">
             <img src="assets/images/html5.png" alt="HTML" />
             <h2>HTML</h2>
           </div>
 
-          <div>
+          <div id="divTwo">
             <img src="assets/images/css.png" alt="CSS" />
             <h2>CSS</h2>
           </div>
 
-          <div>
+          <div id="divThree">
             <img src="assets/images/js.png" alt="JAVASCRIPT" />
             <h2>JAVASCRIPT</h2>
           </div>
 
-          <div>
+          <div id="divfour">
             <img src="assets/images/bootstrap.png" alt="BOOTSTRAP" />
             <h2>BOOTSTRAP</h2>
           </div>
 
-          <div>
+          <div id="divfive">
             <img src="assets/images/java.png" alt="JAVA" />
             <h2>JAVA</h2>
           </div>
 
-          <div>
+          <div id="divSix">
             <img src="assets/images/mysql.png" alt="MYSQL" />
             <h2>MYSQL</h2>
           </div>
 
-          <div>
+          <div id="divSeven">
             <img src="assets/images/hibernate.png" alt="HIBERNATE" />
             <h2>HIBERNATE</h2>
           </div>
 
-          <div>
+          <div id="divEight">
             <img src="assets/images/Node.js.png" alt="NODE JS" />
             <h2>NODE JS</h2>
           </div>
