Update Services Section CSS Styles

--- a/index.html
+++ b/index.html
@@ -223,19 +223,23 @@
       <!-- Skills End -->
 
       <!-- Services Start -->
-      <section>
+      <section id="services">
         <div></div>
         <h1>Services</h1>
 
         <section>
           <!-- Web Design -->
-          <div></div>
+          <div id="serOne"></div>
 
-          <img src="assets/images/web_design.png" alt="Web Design" />
+          <img
+            id="webDesi"
+            src="assets/images/web_design.png"
+            alt="Web Design"
+          />
 
-          <h2>Web Design</h2>
+          <h2 id="webDesH1">Web Design</h2>
 
-          <p>
+          <p id="webDesP">
             I do ui/ux design for the website that helps website to get a unique
             look.
           </p>
@@ -244,13 +248,17 @@
 
           <!-- Web Development -->
 
-          <div></div>
+          <div id="serTwo"></div>
 
-          <img src="assets/images/web_Development.png" alt="Web Development" />
+          <img
+            id="webDevelop"
+            src="assets/images/web_Development.png"
+            alt="Web Development"
+          />
 
-          <h2>Web Development</h2>
+          <h2 id="webDevH2">Web Development</h2>
 
-          <p>
+          <p id="webDevP">
             I also develop the websites. I create high performance websites with
             fast speed.
           </p>
@@ -259,13 +267,17 @@
 
           <!-- App Development -->
 
-          <div></div>
+          <div id="serThree"></div>
 
-          <img src="assets/images/app_development.png" alt="App Development" />
+          <img
+            id="appDeve"
+            src="assets/images/app_development.png"
+            alt="App Development"
+          />
 
-          <h2>App Development</h2>
+          <h2 id="appDevH2">App Development</h2>
 
-          <p>
+          <p id="appDevP">
             I develop mobile applications and Standalone applications. I create
             the best applications.
           </p>
@@ -274,20 +286,25 @@
 
           <!-- Graphic Design -->
 
-          <div></div>
+          <div id="serFour"></div>
 
-          <img src="assets/images/graphic_design.png" alt="Graphic Design" />
+          <img
+            id="graphic"
+            src="assets/images/graphic_design.png"
+            alt="Graphic Design"
+          />
 
-          <h2>Graphic Design</h2>
+          <h2 id="graphicH2">Graphic Design</h2>
 
-          <p>I am best graphic designer. I create creative designs.</p>
+          <p id="graphicP">
+            I am best graphic designer. I create creative designs.
+          </p>
 
           <!--  Graphic Design End -->
         </section>
         <img
           src="assets/images/Skills_background.png"
           alt="Skills background"
-          width="200px"
         />
       </section>
       <!-- services End -->
