--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       <!-- services End -->
 
       <!-- Education Start -->
-      <section>
+      <section id="education">
         <h1>Education</h1>
 
         <img
@@ -323,19 +323,19 @@
           <div><i class="fa-solid fa-graduation-cap"></i></div>
           <div><i class="fa-solid fa-graduation-cap"></i></div>
 
-          <section>
+          <section id="eduLine">
             <div></div>
             <div></div>
             <div></div>
           </section>
 
-          <section>
+          <section id="eduBox">
             <div></div>
             <div></div>
             <div></div>
           </section>
 
-          <section>
+          <section id="eduName">
             <h2>Ordinary Level Education</h2>
             <h3>2018</h3>
             <h2>Advanced Level Education</h2>
