Project Section CSS Style

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <!-- Education End -->
 
       <!-- Project Section Start -->
-      <section>
+      <section id="project">
         <h1>Project</h1>
         <img
           src="assets/images/Project_Background.svg"
@@ -361,20 +361,20 @@
           <div></div>
           <div></div>
 
-          <section>
-            <div>
+          <section id="proImg">
+            <div class="imgHover">
               <img src="assets/images/Project One.png" alt="Project One" />
               <h3>Show More</h3>
               <a href=""></a>
             </div>
 
-            <div>
+            <div class="imgHover">
               <img src="assets/images/Project Two.png" alt="Project Two" />
               <h3>Show More</h3>
               <a href=""></a>
             </div>
 
-            <div>
+            <div class="imgHover">
               <img src="assets/images/Project Three.png" alt="Project Three" />
               <h3>Show More</h3>
               <a
@@ -384,14 +384,14 @@
               ></a>
             </div>
 
-            <div>
+            <div class="imgHover">
               <img src="assets/images/Project Web.png" alt="Project Web" />
               <h3>Show More</h3>
               <a class="link" href="project.html" target="_blank"></a>
             </div>
           </section>
 
-          <section>
+          <section id="projectName">
             <h2>Institute Management System</h2>
             <h2>Business Management System</h2>
             <h2>Deliver Management System</h2>
