Contact Section CSS Styles

--- a/index.html
+++ b/index.html
@@ -402,25 +402,25 @@
       <!-- Project Section End -->
 
       <!-- Contact Section Start -->
-      <section>
+      <section id="contact">
         <h3>get in touch</h3>
         <h1>CONTACT</h1>
 
         <section>
           <img src="assets/images/connected.svg" alt="connected" />
-          <section>
+          <section id="conBox">
             <div><h3>+94 757015240</h3></div>
             <div><h3>kasunumesh38@gmail.com</h3></div>
           </section>
 
-          <section>
+          <section id="conCircul">
             <div><i class="fa-solid fa-phone"></i></div>
             <div><i class="fa-solid fa-envelope"></i></div>
           </section>
 
-          <div></div>
+          <div id="conLine"></div>
 
-          <section>
+          <section id="sendMess">
             <form action="">
               <div class="form-group">
                 <label for="yourName">Your Name</label>
