Update All Section Project

--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
           <a class="btn-1" href="#">Download CV</a>
         </div>
 
-        <img id="aboutImg" src="assets\images\About.png" alt="About Image" />
+        <img
+          id="aboutImg"
+          src="assets\images\About.png"
+          alt="About Image"
+          data-aos="fade-up-right"
+        />
 
         <img
           id="about-two"
@@ -185,7 +190,8 @@
       <!-- Skills Start -->
 
       <section id="skills">
-        <h1>SKILLS</h1>
+        <h5>What Do I Know</h5>
+        <h1><span>My</span> Skills</h1>
 
         <section>
           <div id="divOne">
@@ -234,8 +240,8 @@
 
       <!-- Services Start -->
       <section id="services">
-        <div></div>
-        <h1>Services</h1>
+        <h5>What I Am Expert In</h5>
+        <h1><span>My</span> Services</h1>
 
         <section>
           <!-- Web Design -->
@@ -321,7 +327,8 @@
 
       <!-- Education Start -->
       <section id="education">
-        <h1>Education</h1>
+        <h5>Educational Qualification</h5>
+        <h1><span>E</span>ducation</h1>
 
         <img
           src="assets/images/Education_Background.svg"
@@ -359,7 +366,8 @@
 
       <!-- Project Section Start -->
       <section id="project">
-        <h1>Project</h1>
+        <h5>Portfolio</h5>
+        <h1><span>My</span> Project</h1>
         <img
           src="assets/images/Project_Background.svg"
           alt="Project Background"
