Update Project Styles

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
         </p>
 
         <div class="buttonContact">
-          <a class="btn-1" href="#">Download CV</a>
+          <a class="btn-1" href="#"
+            ><i class="fa-sharp fa-solid fa-circle-down"></i>Download CV</a
+          >
         </div>
 
         <img
@@ -421,49 +423,129 @@
 
       <!-- Contact Section Start -->
       <section id="contact">
-        <h3>get in touch</h3>
-        <h1>CONTACT</h1>
+        <h1>Contact <span>Me</span></h1>
+        <h3>If You Have Any Project In Your Mind</h3>
 
-        <section>
-          <img src="assets/images/connected.svg" alt="connected" />
-          <section id="conBox">
-            <div><h3>+94 757015240</h3></div>
-            <div><h3>kasunumesh38@gmail.com</h3></div>
-          </section>
+        <p>
+          I'm a software engineer - contact us to create the highest quality
+          software according to your needs.
+        </p>
 
-          <section id="conCircul">
-            <div><i class="fa-solid fa-phone"></i></div>
-            <div><i class="fa-solid fa-envelope"></i></div>
-          </section>
+        <ul>
+          <li><a href="tel:770313314">+94 770 313 314</a></li>
+          <li><a href="tel:757015240">+94 75 7015 240</a></li>
+          <li>
+            <a href="mailto:kasunumesh38@gmail.com">kasunumesh38@gmail.com</a>
+          </li>
+        </ul>
 
-          <div id="conLine"></div>
+        <!-- Social Media Start -->
 
-          <section id="sendMess">
-            <form action="">
-              <div class="form-group">
-                <label for="yourName">Your Name</label>
-                <input type="text" id="yourName" name="yourName" />
+        <section class="wrapper">
+          <a
+            class="link"
+            href="https://www.facebook.com/wakasun.kasun.1/"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon">
+                <i class="fa-brands fa-facebook-f"></i>
               </div>
+              <span>Facebook</span>
+            </div>
+          </a>
 
-              <div class="form-group">
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" />
-              </div>
+          <a
+            class="link"
+            href="https://www.instagram.com/kasun_umesh_/"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <span>Instagram</span>
+            </div>
+          </a>
 
-              <div class="form-group">
-                <label for="message">Your Message</label>
-                <textarea
-                  name="message"
-                  id="message"
-                  cols="30"
-                  rows="10"
-                ></textarea>
-              </div>
+          <a
+            class="link"
+            href="https://twitter.com/KasunUmesh_"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+              <span>Twitter</span>
+            </div>
+          </a>
 
-              <button type="submit">Send</button>
-            </form>
-          </section>
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/kasun-umesh-49242b226/"
+            target="_blank"
+          >
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+              <span>Linkedin</span>
+            </div>
+          </a>
+
+          <a class="link" href="https://github.com/KasunUmesh" target="_blank">
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-github"></i></div>
+              <span>Github</span>
+            </div>
+          </a>
+
+          <a class="link" href="https://wa.me/0757015240" target="_blank">
+            <div class="button">
+              <div class="icon"><i class="fa-brands fa-whatsapp"></i></div>
+              <span>Whatsapp</span>
+            </div>
+          </a>
         </section>
+
+        <!-- Social Media End -->
+
+        <!-- Message Sent Section Start -->
+        <section id="sendMess">
+          <form action="">
+            <div class="form-group">
+              <input
+                type="text"
+                id="yourName"
+                name="yourName"
+                placeholder="Your Name"
+              />
+            </div>
+
+            <div class="form-group">
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Your Email"
+              />
+            </div>
+
+            <div class="form-group">
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+                placeholder="Your Message"
+              ></textarea>
+            </div>
+
+            <button type="submit">
+              <i
+                class="fa-solid fa-paper-plane"
+                style="color: #ffffff; padding-right: 15px"
+              ></i
+              >Send Message
+            </button>
+          </form>
+        </section>
+        <!-- Message Sent Section End -->
       </section>
       <!-- Contact Section End -->
     </main>
