update animate Effect

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Import Pre Loader Styles -->
     <link rel="stylesheet" href="assets/css/preloader.css" />
+    <!-- Import Animated Style -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <div id="pre-loader">
@@ -167,7 +172,9 @@
           I like to work collaboratively in teams.
         </p>
 
-        <div class="buttonContact">
+        <div
+          class="buttonContact animate__animated animate__shakeX animate__infinite animate__slow"
+        >
           <a class="btn-1" href="#"
             ><i class="fa-sharp fa-solid fa-circle-down"></i>Download CV</a
           >
@@ -178,6 +185,7 @@
           src="assets\images\About.png"
           alt="About Image"
           data-aos="fade-up-right"
+          class="animate__animated animate__pulse animate__infinite animate__slow"
         />
 
         <img
@@ -536,7 +544,10 @@
               ></textarea>
             </div>
 
-            <button type="submit">
+            <button
+              type="submit"
+              class="animate__animated animate__pulse animate__infinite animate__fast"
+            >
               <i
                 class="fa-solid fa-paper-plane"
                 style="color: #ffffff; padding-right: 15px"
