Create Footer Section

--- a/index.html
+++ b/index.html
@@ -561,6 +561,10 @@
       <!-- Contact Section End -->
     </main>
 
+    <footer>
+      <p>Copyright ©2023 By Kasun Umesh All Rights Reserved</p>
+    </footer>
+
     <!-- AOS lib Js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
