Home Page Responsive

--- a/index.html
+++ b/index.html
@@ -88,23 +88,23 @@
 
     <main>
       <!-- Home -->
-      <!-- <section id="home">
+      <section id="home">
         <section id="homeImg" data-aos="fade-left">
           <img src="assets\images\mainImage.jpg" alt="Main Image" />
         </section>
         <section id="homeMyName" data-aos="fade-right">
-          <!-- <h1>Hello....!</h1>
+          <!-- <<h1>Hello....!</h1>
           <h1 id="name">I'm Kasun Umesh</h1>
           <h1 id="change-name">Kasun Umesh</h1>
           <h2 id="other-title">Professional Full Stack Developer</h2> -->
 
-          <!-- <div class="text-box">
+          <div class="text-box">
             <h1>I'm <span class="auto-type"></span></h1>
             <h2>Professional Full Stack Developer</h2>
-          </div> -->
+          </div>
           <!-- Social Media Start -->
 
-          <!-- <section class="wrapper">
+          <section class="wrapper">
             <a
               class="link"
               href="https://www.facebook.com/wakasun.kasun.1/"
@@ -168,7 +168,7 @@
                 <span>Whatsapp</span>
               </div>
             </a>
-          </section> -->
+          </section> 
 
           <!-- Social Media End -->
         </section>
@@ -593,22 +593,22 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <script>
-      // AOS.init(); // AOS init
+      AOS.init(); // AOS init
 
       $(document).ready(() => {
         $("#pre-loader").css("display", "none");
       });
 
-      // var typed = new Typed(".auto-type", {
-      //   strings: [
-      //     "Kasun Umesh",
-      //     "Software Engineer",
-      //     "Fullstack Java Developer",
-      //   ],
-      //   typeSpeed: 150,
-      //   backSpeed: 150,
-      //   loop: true,
-      // });
+      var typed = new Typed(".auto-type", {
+        strings: [
+          "Kasun Umesh",
+          "Software Engineer",
+          // "Fullstack Java Developer",
+        ],
+        typeSpeed: 150,
+        backSpeed: 150,
+        loop: true,
+      });
 
 
       $(".hamburger").on("click", function () {
