About Section Responsive

--- a/index.html
+++ b/index.html
@@ -177,18 +177,13 @@
       <!-- Home End -->
 
       <!-- About Me Start -->
-      <!-- <section id="about">
+       <section id="about">
         <h1>About <span>Me</span></h1>
         <h5>Software Engineer</h5>
 
         <p>
           Hello, I’m Kasun Umesh. I am currently an undergraduate computer
-          science student.<br />
-          I have a strong foundation in computer science principles and am
-          always looking to<br />
-          expand my knowledge. I am a quick learner and not afraid to take on
-          new challenges.<br />
-          I like to work collaboratively in teams.
+          science student. I have a strong foundation in computer science principles and am always looking to expand my knowledge. I am a quick learner and not afraid to take on new challenges. I like to work collaboratively in teams.
         </p>
 
         <div
@@ -212,7 +207,7 @@
           src="assets\images\About_two.png"
           alt="About Background Image"
         />
-      </section> -->
+      </section>
 
       <!-- About Me End -->
 
