Skills Section Responsive

--- a/index.html
+++ b/index.html
@@ -213,11 +213,14 @@
 
       <!-- Skills Start -->
 
-      <!-- <section id="skills">
+      <section id="skills">
         <h5>What Do I Know</h5>
         <h1><span>My</span> Skills</h1>
 
-        <section>
+        <input type="radio" name="dot" id="one">
+        <input type="radio" name="dot" id="two">
+
+        <section class="one-card" id="card">
           <div id="divOne">
             <img src="assets/images/html5.png" alt="HTML" />
             <h2>HTML</h2>
@@ -237,6 +240,8 @@
             <img src="assets/images/bootstrap.png" alt="BOOTSTRAP" />
             <h2>BOOTSTRAP</h2>
           </div>
+        </section>
+        <section class="two-card" id="card">
 
           <div id="divfive">
             <img src="assets/images/java.png" alt="JAVA" />
@@ -258,7 +263,13 @@
             <h2>NODE JS</h2>
           </div>
         </section>
-      </section> -->
+
+        <div class="button">
+          <label for="one" class="one active"></label>
+          <label for="two" class="two"></label>
+        </div>
+
+      </section>
 
       <!-- Skills End -->
 
