Responsive Education Section

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <!-- services End -->
 
       <!-- Education Start -->
-      <!-- <section id="education">
+      <section id="education">
         <h5>Educational Qualification</h5>
         <h1><span>E</span>ducation</h1>
 
@@ -392,7 +392,7 @@
             <h3>2021</h3>
           </section>
         </section>
-      </section> -->
+      </section>
       <!-- Education End -->
 
       <!-- Project Section Start -->
