--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <!-- Education End -->
 
       <!-- Project Section Start -->
-      <!-- <section id="project">
+      <section id="project">
         <h5>Portfolio</h5>
         <h1><span>My</span> Project</h1>
         <img
@@ -447,7 +447,7 @@
             <h2>All Web Developing Project</h2>
           </section>
         </section>
-      </section> -->
+      </section>
       <!-- Project Section End -->
 
       <!-- Contact Section Start -->
