--- a/index.html
+++ b/index.html
@@ -587,9 +587,9 @@
       <!-- Contact Section End -->
     </main>
 
-    <!-- <footer>
+    <footer>
       <p>Copyright ©2023 By Kasun Umesh All Rights Reserved</p>
-    </footer> -->
+    </footer>
 
     <!-- AOS lib Js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
